i made some changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <img class="image" src="Assets/images/marvel.jpg" alt="Marvel Trivia Game" width="800" height="400">
                     <h1>Marvel Trivia Game</h1>
                     <br />
-                    <h2><strong><p style="font-size: 20px; color: blue;font-family: 'Permanent Marker', cursive;">Do you know much about the Marvel Comics? Let's play this quiz and check your score now!</p></strong></h2>
+                    <h2><strong><p style="font-size: 20px; color: blue;font-family: 'Permanent Marker', cursive;">Do you know much about the Marvel Comics? Let's play this quiz!</p></strong></h2>
             </div>
 
 </header>
